@@ -3238,28 +3238,35 @@ bw_display_new_mail_notification(int num_new, int has_new)
                           "balsa", "newmail", NULL);
 
 #if GTK_CHECK_VERSION(2, 10, 0)
-    /* set up the sys tray icon when it is not yet present */
-    if (!new_mail_tray) {
-	new_mail_tray = gtk_status_icon_new_from_icon_name("stock_mail-compose");
-	g_signal_connect_swapped(G_OBJECT(new_mail_tray), "activate",
-				 G_CALLBACK(gtk_window_present),
-				 balsa_app.main_window);
-	/* hide tray icon when the main window gets the focus. */
-	g_signal_connect(G_OBJECT(balsa_app.main_window), "notify::is-active",
-			 G_CALLBACK(hide_sys_tray_icon), new_mail_tray);
-    }
+    if (balsa_app.notify_new_mail_icon) {
+        /* set up the sys tray icon when it is not yet present */
+        if (!new_mail_tray) {
+            new_mail_tray =
+                gtk_status_icon_new_from_icon_name("stock_mail-compose");
+            g_signal_connect_swapped(G_OBJECT(new_mail_tray), "activate",
+                                     G_CALLBACK(gtk_window_present),
+                                     balsa_app.main_window);
+            /* hide tray icon when the main window gets the focus. */
+            g_signal_connect(G_OBJECT(balsa_app.main_window),
+                             "notify::is-active",
+                             G_CALLBACK(hide_sys_tray_icon),
+                             new_mail_tray);
+        }
 
-    /* show sys tray icon if we don't have the focus */
-    if (!gtk_window_is_active(GTK_WINDOW(balsa_app.main_window))) {
-	if (num_new > 0)
-	    msg = g_strdup_printf(ngettext("Balsa: you have received %d new message.",
-					   "Balsa: you have received %d new messages.",
-					   num_new + num_total), num_new + num_total);
-	else
-	    msg = g_strdup(_("Balsa: you have new mail."));
-	gtk_status_icon_set_tooltip(new_mail_tray, msg);
-	gtk_status_icon_set_visible(new_mail_tray, TRUE);
-	g_free(msg);
+        /* show sys tray icon if we don't have the focus */
+        if (!gtk_window_is_active(GTK_WINDOW(balsa_app.main_window))) {
+            if (num_new > 0)
+                msg = g_strdup_printf
+                    (ngettext
+                     ("Balsa: you have received %d new message.",
+                      "Balsa: you have received %d new messages.",
+                      num_new + num_total), num_new + num_total);
+            else
+                msg = g_strdup(_("Balsa: you have new mail."));
+            gtk_status_icon_set_tooltip(new_mail_tray, msg);
+            gtk_status_icon_set_visible(new_mail_tray, TRUE);
+            g_free(msg);
+        }
     }
 #endif
 
